Styling tweaks to fix  button overflowing page

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body , html{
 }
 
 #mapid {    
-    height: 85%;
+    height: 80%;
 
 }
 
@@ -238,4 +238,44 @@ input:checked + #toggle-color-6 {
   position: absolute;
   left:9px;
   top: -6px;
+}
+
+
+/* Location Search Styling */
+
+.ac-renderer{
+  position: fixed;
+  border: 1px solid #ccc;
+  margin-top: -1px;
+  max-width: 400px;
+  z-index: 1000;
+}
+.ac-row {
+  white-space: nowrap;
+  position: relative;
+  cursor: pointer;
+  padding: 5px;
+  background-color: #fff;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+}
+.ac-row .suffix {
+  font-size:.8em;
+  color:#ccc;
+  padding:.1em 0 .1em 5px;
+}
+.ac-row .type {
+  font-size:.7em;
+  color:#aaa;
+  display:block;
+  width:100%;
+}
+.ac-highlighted {font-weight: bold;}
+.ac-active {background-color: #eee;}
+
+#search{
+  width:100%;
+  height:5%;
+  text-align:center;
+  font-size:20px;  
 }
